--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,22 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<script src="https://kit.fontawesome.com/cd932e21a0.js" crossorigin="anonymous"></script>
+		<style>
+	html,body {
+		font-family: "Jetbrains Mono";
+		height: 100%;
+		width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+	p {
+		color: hsl(245deg 50% 91%);
+	}
+    h1 {
+        color: hsl(189deg 43% 73%);
+    }
+		</style>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
