deploy: a161952bac408d86660ac8d7d7b703b0a9f79e59

--- a/404.html
+++ b/404.html
@@ -18,14 +18,14 @@
     }
 		</style>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Fv6O0ABi.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BCmEsslZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CSfpBdEn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/vNe3PSCi.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C2qmxJyU.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/e5G8yMeS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dkq-U7pN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DLHN_H6O.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BdXhmR7y.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BajVYumy.js">
 	</head>
@@ -33,15 +33,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_17mp4b6 = {
+					__sveltekit_fisbh3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Fv6O0ABi.js"),
-						import("/_app/immutable/entry/app.Dkq-U7pN.js")
+						import("/_app/immutable/entry/start.CSfpBdEn.js"),
+						import("/_app/immutable/entry/app.DLHN_H6O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
