--- a/404.html
+++ b/404.html
@@ -1,47 +1,43 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="style.css" />
 		<script src="https://kit.fontawesome.com/cd932e21a0.js" crossorigin="anonymous"></script>
 		<style>
-	html,body {
-		font-family: "Jetbrains Mono";
-		height: 100%;
-		width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-	p {
-		color: hsl(245deg 50% 91%);
-	}
-    h1 {
-        color: hsl(189deg 43% 73%);
-    }
+			html,body {
+			font-family: "Jetbrains Mono";
+			height: 100%;
+			width: 100%;
+			padding: 0;
+			margin: 0;
+			}
 		</style>
 		<meta charset="utf-8" />
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CSfpBdEn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/vNe3PSCi.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C2qmxJyU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/e5G8yMeS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DLHN_H6O.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BdXhmR7y.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BajVYumy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DDqIqFSU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DkMP17wd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BsU3Dl-v.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CmAMweI5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B2RwkRCF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DP6P5JMp.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DDN0QMLg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CT7n67kG.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_fisbh3 = {
+					__sveltekit_1rwnvgx = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CSfpBdEn.js"),
-						import("/_app/immutable/entry/app.DLHN_H6O.js")
+						import("/_app/immutable/entry/start.DDqIqFSU.js"),
+						import("/_app/immutable/entry/app.B2RwkRCF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
