--- a/404.html
+++ b/404.html
@@ -16,28 +16,28 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DDqIqFSU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DkMP17wd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BsU3Dl-v.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CmAMweI5.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B2RwkRCF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DP6P5JMp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DDN0QMLg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CT7n67kG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DjPMkRp4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DkXLp9bC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DZ0AvcLq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/W_z8AWBS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C_mLKArM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DdTcdP2I.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C1BEHSdE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/8S4Xltvj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1rwnvgx = {
+					__sveltekit_j5pg64 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DDqIqFSU.js"),
-						import("/_app/immutable/entry/app.B2RwkRCF.js")
+						import("/_app/immutable/entry/start.DjPMkRp4.js"),
+						import("/_app/immutable/entry/app.C_mLKArM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
