--- a/404.html
+++ b/404.html
@@ -16,28 +16,28 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DjPMkRp4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DkXLp9bC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DZ0AvcLq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/W_z8AWBS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C_mLKArM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DdTcdP2I.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C1BEHSdE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/8S4Xltvj.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.8HPNtvuN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BH_OZpG2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B00WbuhN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BT6p--vP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.g8rNxfts.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B25aZHxD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ze_GXNYa.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BPdtufwN.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_j5pg64 = {
+					__sveltekit_xu28e3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DjPMkRp4.js"),
-						import("/_app/immutable/entry/app.C_mLKArM.js")
+						import("/_app/immutable/entry/start.8HPNtvuN.js"),
+						import("/_app/immutable/entry/app.g8rNxfts.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
