deploy: 71f59384bb6bb2aef83c436b10bee763f4d07a56

--- a/404.html
+++ b/404.html
@@ -16,11 +16,11 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dkl03GSP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/OP8Q0O_H.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.F_Z4VBMJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BeiLJ3Uu.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B00WbuhN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BT6p--vP.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.6Kbe-0rn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CBXbzRlf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B25aZHxD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ze_GXNYa.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BPdtufwN.js">
@@ -29,15 +29,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1oau7dp = {
+					__sveltekit_5j30ii = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dkl03GSP.js"),
-						import("/_app/immutable/entry/app.6Kbe-0rn.js")
+						import("/_app/immutable/entry/start.F_Z4VBMJ.js"),
+						import("/_app/immutable/entry/app.CBXbzRlf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
