HANDLES DONE (there are minor additions that I would like but m bailing on them for now)

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://kit.fontawesome.com/cd932e21a0.js" crossorigin="anonymous"></script>
 		<style>
