--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://kit.fontawesome.com/cd932e21a0.js" crossorigin="anonymous"></script>
 		<style>
@@ -16,28 +17,28 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.F_Z4VBMJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BeiLJ3Uu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B00WbuhN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BT6p--vP.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CBXbzRlf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B25aZHxD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ze_GXNYa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BPdtufwN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CPxHmtG2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/2sczaCrN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cv3Uavsq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DUJYg6NA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.EqBE94jm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BnsLtIi0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/pZFyUqNi.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BgtJLnCL.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_5j30ii = {
+					__sveltekit_k0w7qy = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.F_Z4VBMJ.js"),
-						import("/_app/immutable/entry/app.CBXbzRlf.js")
+						import("/_app/immutable/entry/start.CPxHmtG2.js"),
+						import("/_app/immutable/entry/app.EqBE94jm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
