--- a/404.html
+++ b/404.html
@@ -17,28 +17,30 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CPxHmtG2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/2sczaCrN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cv3Uavsq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DUJYg6NA.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.EqBE94jm.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BnsLtIi0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/pZFyUqNi.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BgtJLnCL.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.m6zqFMWB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CSLSPbi9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DfsaG9pB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DVEj76PI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Czae_GLN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BVnpeL5a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C8gEZ7A0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bqwvsy2b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/bYIXPZLE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C_Ih6T5U.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_k0w7qy = {
+					__sveltekit_2wj8c9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CPxHmtG2.js"),
-						import("/_app/immutable/entry/app.EqBE94jm.js")
+						import("/_app/immutable/entry/start.m6zqFMWB.js"),
+						import("/_app/immutable/entry/app.BVnpeL5a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
