--- a/404.html
+++ b/404.html
@@ -17,30 +17,30 @@
 		<link rel="icon" href="pfp.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.m6zqFMWB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CSLSPbi9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DfsaG9pB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DVEj76PI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Czae_GLN.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BVnpeL5a.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C8gEZ7A0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bqwvsy2b.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/bYIXPZLE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C_Ih6T5U.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DIdnq9Ts.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BBreDnLE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BcELwpNM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/xMeoOJcm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bi8ijk4A.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BiOY8LSJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ryzeSl37.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CMLubtvv.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/rbwE-ZB5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C-OnFrqz.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_2wj8c9 = {
+					__sveltekit_1rhevgb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.m6zqFMWB.js"),
-						import("/_app/immutable/entry/app.BVnpeL5a.js")
+						import("/_app/immutable/entry/start.DIdnq9Ts.js"),
+						import("/_app/immutable/entry/app.BiOY8LSJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
